--- a/Index.html
+++ b/Index.html
@@ -96,48 +96,136 @@
               </div>
           </div>
       </section>
-
-      <!-- Skills Section -->
-      <section id="skills" class="mb-5">
-          <div class="title">
-              <h2>SKILLS</h2>
-          </div>
-          <div class="container bg-white shadow p-5">
-            <div class="row">
-                
-                </div>
+      <!-- Skills -->
+      <section id="skills">
+        <div class="container bg-white shadow mb-5">
+          <div class="row">
+            <div class="col-md-6 d-flex justify-content-between">
+               <div class="col-lg-4 col-md-6">
+                <div class="skills-item">
+                  <i class="fa-brands fa-html5"></i>
+              </div>
+               </div>
+               <div class="col-lg-4 col-md-6">
+                <div class="skills-item">
+                  <i class="fa-brands fa-css3-alt"></i>
+              </div>
+               </div>
+               <div class="col-lg-4 col-md-6">
+                <div class="skills-item">
+                  <i class="fa-brands fa-js"></i>
+              </div>
+               </div>
+               <div class="col-lg-4 col-md-6">
+                <div class="skills-item">
+                  <i class="fa-brands fa-vuejs"></i>
+              </div>
+               </div>
+               <div class="col-lg-4 col-md-6">
+                <div class="skills-item">
+                  <i class="fa-brands fa-node-js"></i>
+              </div>
+               </div>
+               <div class="col-lg-4 col-md-6">
+                <div class="skills-item">
+                  <i class="fa-solid fa-database"></i>
+              </div>
+               </div>
             </div>
-                    
+            <div class="col-md-6"></div>
           </div>
+        </div>
+      </section>
+      <!-- Resume -->
+      <section id="resume">
+        <div class="container bg-white shadow mb-5">
+          <div class="title text-center">
+            <h2>RESUME</h2>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <h3>EDUCATION</h3>
+              <div class="education">
+                <div class="edu-item">
+                  <h6>date</h6>
+                  <h4>heading</h4>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta dolores ipsam molestiae incidunt quae assumenda doloremque placeat, ea id ipsum dolor corrupti esse blanditiis iure optio doloribus quibusdam rerum similique!</p>
+                </div>
+                <div class="edu-item">
+                  <h6>date</h6>
+                  <h4>heading</h4>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta dolores ipsam molestiae incidunt quae assumenda doloremque placeat, ea id ipsum dolor corrupti esse blanditiis iure optio doloribus quibusdam rerum similique!</p>
+                </div>
+                <div class="edu-item">
+                  <h6>date</h6>
+                  <h4>heading</h4>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta dolores ipsam molestiae incidunt quae assumenda doloremque placeat, ea id ipsum dolor corrupti esse blanditiis iure optio doloribus quibusdam rerum similique!</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <h3>EDUCATION</h3>
+              <div class="experience">
+                <div class="exp-item">
+                  <h6>date</h6>
+                  <h4>heading</h4>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta dolores ipsam molestiae incidunt quae assumenda doloremque placeat, ea id ipsum dolor corrupti esse blanditiis iure optio doloribus quibusdam rerum similique!</p>
+                </div>
+                <div class="exp-item">
+                  <h6>date</h6>
+                  <h4>heading</h4>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta dolores ipsam molestiae incidunt quae assumenda doloremque placeat, ea id ipsum dolor corrupti esse blanditiis iure optio doloribus quibusdam rerum similique!</p>
+                </div>
+                <div class="exp-item">
+                  <h6>date</h6>
+                  <h4>heading</h4>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta dolores ipsam molestiae incidunt quae assumenda doloremque placeat, ea id ipsum dolor corrupti esse blanditiis iure optio doloribus quibusdam rerum similique!</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
       <!-- Project -->
       <section id="project">
-        <div class="container bg-white shadow p-5">
+        <div class="container bg-white shadow p-5 mb-5">
           <div class="title text-center">
             <h2>PROJECTS</h2>
           </div>
           <div class="staff d-flex justify-content-center mb-5">
             <img class="img-fluid" src="./images/ciudad-maderas-MXbM1NrRqtI-unsplash.jpg" />
             <div class="staff-details">
-              <h5>Name</h5>
-              <p>Occupation</p>
-              links
+              <h3>Heading</h3>
+              <p>HTML/CSS</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, aperiam?</p>
+              <div class="staff_btn">
+                <a href=""><button class="">Live</button></a>
+              <a href=""><button>Github</button></a>
+              </div>
             </div>
           </div>
           <div class="staff d-flex justify-content-center mb-5">
             <img class="img-fluid" src="./images/kelsey-curtis--27u_GzlAFw-unsplash.jpg" />
             <div class="staff-details">
-              <h5>Name</h5>
-              <p>Occupation</p>
-              links
+              <h3>Heading</h3>
+              <p>HTML/CSS</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, aperiam?</p>
+              <div class="staff_btn">
+                <a href=""><button class="">Live</button></a>
+              <a href=""><button>Github</button></a>
+              </div>
             </div>
           </div>
           <div class="staff d-flex justify-content-center mb-5">
             <img class="img-fluid" src="./images/marten-bjork-n_IKQDCyrG0-unsplash.jpg" />
             <div class="staff-details">
-              <h5>Name</h5>
-              <p>Occupation</p>
-              links
+              <h3>Heading</h3>
+              <p>HTML/CSS</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, aperiam?</p>
+              <div class="staff_btn">
+                <a href=""><button class="">Live</button></a>
+              <a href=""><button>Github</button></a>
+              </div>
             </div>
           </div>
         </div>
@@ -146,7 +234,7 @@
       <section id="testimonial">
         <div class="container bg-white shadow mb-5 d-flex flex-column justify-content-center align-items-center">
           <div class="title">
-            <h2>TESTIMONAIL</h2>
+            <h2>TESTIMONIAL</h2>
           </div>
           <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -197,8 +285,8 @@
       </section>
       <!-- Contact Section -->
       <section id="contact">
-        <div class="container bg-white shadow">
-          <div class="Jumbotron d-flex justify-content-center align-items-center mb-5 p-5">
+        <div class="container bg-white shadow p-5 mb-5">
+          <div class="Jumbotron d-flex justify-content-center align-items-center mb-5">
            <div class="row">
              <div class="col-md-6">
                <h1>Let's Do<br>Great Things<br>Together.</h1>
