--- a/Index.html
+++ b/Index.html
@@ -15,6 +15,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
     <title>Hello, world!</title>
+    <!-- Aos -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   </head>
   <body>
     <!-- NavBar -->
@@ -54,13 +56,15 @@
             <div class="titles">
                 <h1>Zachary Williams</h1>
                 <p>Aspiring Full-Stack Developer</p>
-                <a href="#About"><button class="border rounded-pill p-2">About Me</button></a>
+            </div>
+            <div class="about-btn">
+              <a href="#About"><button class=" p-2"><i class="fa-solid fa-angles-down"></i></button></a>
             </div>
           </div>
       </section>
       <!-- About Section -->
       <section id="About" class="mb-5">
-          <div class="container shadow p-5 bg-white">
+          <div class="container shadow p-5 bg-dark text-light">
               <div class="row mx-5">
                   <div class="col-md-6">
                       <div class="about_img">
@@ -98,9 +102,7 @@
       </section>
       <!-- Skills -->
       <section id="skills">
-        <div class="container bg-white shadow mb-5">
-          <div class="row">
-            <div class="col-md-6 d-flex justify-content-between">
+        <div class="container  shadow mb-5">
                <div class="col-lg-4 col-md-6">
                 <div class="skills-item">
                   <i class="fa-brands fa-html5"></i>
@@ -131,19 +133,16 @@
                   <i class="fa-solid fa-database"></i>
               </div>
                </div>
-            </div>
-            <div class="col-md-6"></div>
-          </div>
         </div>
       </section>
       <!-- Resume -->
       <section id="resume">
-        <div class="container bg-white shadow mb-5">
+        <div class="container bg-dark text-light shadow mb-5 p-5">
           <div class="title text-center">
             <h2>RESUME</h2>
           </div>
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 border-left">
               <h3>EDUCATION</h3>
               <div class="education">
                 <div class="edu-item">
@@ -188,7 +187,7 @@
       </section>
       <!-- Project -->
       <section id="project">
-        <div class="container bg-white shadow p-5 mb-5">
+        <div class="container shadow p-5 mb-5">
           <div class="title text-center">
             <h2>PROJECTS</h2>
           </div>
@@ -232,7 +231,7 @@
       </section>
       <!-- Testimonial -->
       <section id="testimonial">
-        <div class="container bg-white shadow mb-5 d-flex flex-column justify-content-center align-items-center">
+        <div class="container bg-dark text-light shadow mb-5 d-flex flex-column justify-content-center align-items-center">
           <div class="title">
             <h2>TESTIMONIAL</h2>
           </div>
@@ -241,7 +240,7 @@
               <div class="carousel-item active">
                 <div class="card">
                   <div class="t_img d-flex justify-content-center">
-                    <img class="border border-5 rounded-circle" src="https://picsum.photos/150?random=1" alt="">
+                    <img src="./images/Cameron (5).JPG" alt="">
                   </div>
                   <div class="t_msg p-5 text-center">
                     <h6>Name Surname</h6>
@@ -252,7 +251,7 @@
               <div class="carousel-item">
                 <div class="card">
                   <div class="t_img d-flex justify-content-center">
-                    <img class="border border-5 rounded-circle" src="https://picsum.photos/150?random=2" alt="">
+                    <img src="./images/Chanique (1).JPG" alt="">
                   </div>
                   <div class="t_msg p-5 text-center">
                     <h6>Name Surname</h6>
@@ -263,7 +262,7 @@
               <div class="carousel-item">
                 <div class="card">
                   <div class="t_img d-flex justify-content-center">
-                    <img class="border border-5 rounded-circle" src="https://picsum.photos/150?random=1" alt="">
+                    <img src="./images/Sunethia (4).JPG" alt="">
                   </div>
                   <div class="t_msg p-5 text-center">
                     <h6>Name Surname</h6>
@@ -347,6 +346,10 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script type="text/javascript" src="particles.js"></script>
     <script type="text/javascript" src="app.js"></script>
   </body>
