--- a/Index.html
+++ b/Index.html
@@ -20,13 +20,13 @@
   </head>
   <body>
     <!-- NavBar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -102,37 +102,60 @@
       </section>
       <!-- Skills -->
       <section id="skills">
-        <div class="container  shadow mb-5">
-               <div class="col-lg-4 col-md-6">
-                <div class="skills-item">
-                  <i class="fa-brands fa-html5"></i>
-              </div>
+        <div class="container  bg-white shadow mb-5 p-5">
+               <div class="row">
+                 <div class="titles1">
+                   <h2>Technical Skills</h2>
+                 </div>
+                <div class="col-lg-4 col-md-6">
+                  <div class="skills-item">
+                    <i class="fa-brands fa-html5"></i>
+                </div>
+                 </div>
+                 <div class="col-lg-4 col-md-6">
+                  <div class="skills-item">
+                    <i class="fa-brands fa-css3-alt"></i>
+                </div>
+                 </div>
+                 <div class="col-lg-4 col-md-6">
+                  <div class="skills-item">
+                    <i class="fa-brands fa-js"></i>
+                </div>
+                 </div>
+                 <div class="col-lg-4 col-md-6">
+                  <div class="skills-item">
+                    <i class="fa-brands fa-vuejs"></i>
+                </div>
+                 </div>
+                 <div class="col-lg-4 col-md-6">
+                  <div class="skills-item">
+                    <i class="fa-brands fa-node-js"></i>
+                </div>
+                 </div>
+                 <div class="col-lg-4 col-md-6">
+                  <div class="skills-item">
+                    <i class="fa-solid fa-database"></i>
+                </div>
+                 </div>
                </div>
-               <div class="col-lg-4 col-md-6">
-                <div class="skills-item">
-                  <i class="fa-brands fa-css3-alt"></i>
+               <hr>
+               <div class="titles1 d-flex  justify-content-end">
+                <h2>Soft Skills</h2>
               </div>
-               </div>
-               <div class="col-lg-4 col-md-6">
-                <div class="skills-item">
-                  <i class="fa-brands fa-js"></i>
-              </div>
-               </div>
-               <div class="col-lg-4 col-md-6">
-                <div class="skills-item">
-                  <i class="fa-brands fa-vuejs"></i>
-              </div>
-               </div>
-               <div class="col-lg-4 col-md-6">
-                <div class="skills-item">
-                  <i class="fa-brands fa-node-js"></i>
-              </div>
-               </div>
-               <div class="col-lg-4 col-md-6">
-                <div class="skills-item">
-                  <i class="fa-solid fa-database"></i>
-              </div>
-               </div>
+                  <div class="soft d-flex  justify-content-between">
+                    <div class="cirlce rounded-circle" style="height: 200px; width: 200px;" id="particles-js">
+                    </div>
+                    <ul>
+                      <li>Adaptability</li>
+                      <li>Growth Mindset</li>
+                      <li>Openess To Feedback</li>
+                      <li>Team Player Attitude</li>
+                      <li>Time Management</li>
+                      <li>Work Ethic</li>
+                    </ul>
+                  </div>
+              
+              
         </div>
       </section>
       <!-- Resume -->
@@ -187,7 +210,7 @@
       </section>
       <!-- Project -->
       <section id="project">
-        <div class="container shadow p-5 mb-5">
+        <div class="container bg-white shadow p-5 mb-5">
           <div class="title text-center">
             <h2>PROJECTS</h2>
           </div>
@@ -284,25 +307,21 @@
       </section>
       <!-- Contact Section -->
       <section id="contact">
-        <div class="container bg-white shadow p-5 mb-5">
+        <div class="container bg-white shadow mb-5">
           <div class="Jumbotron d-flex justify-content-center align-items-center mb-5">
            <div class="row">
-             <div class="col-md-6">
-               <h1>Let's Do<br>Great Things<br>Together.</h1>
-            </div>
-            <div class="col-md-6">
-              <div class="cirlce rounded-circle" style="width: 300px;" id="particles-js">
-              </div>
+             <div class="col-md-6 text-white d-flex justify-content-center p-5">
+               <h1>Let's Do Great Things Together.</h1>
             </div>
            </div>
           </div>
           <div class="row mx-3">
-            <div class="col-md-4">
+            <div class="col-md-5">
               <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d6616.706199524373!2d18.485771075965072!3d-33.98346307249869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d-33.981002!2d18.486967099999998!4m5!1s0x1dcc433bedd50e81%3A0x9c746d268c8e0ad9!2slife%20choices!3m2!1d-33.985664299999996!2d18.4926986!5e0!3m2!1sen!2sza!4v1652168925235!5m2!1sen!2sza" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d6616.706199524373!2d18.485771075965072!3d-33.98346307249869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d-33.981002!2d18.486967099999998!4m5!1s0x1dcc433bedd50e81%3A0x9c746d268c8e0ad9!2slife%20choices!3m2!1d-33.985664299999996!2d18.4926986!5e0!3m2!1sen!2sza!4v1652168925235!5m2!1sen!2sza" width="380" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
-            <div class="col-md-8">
+            <div class="col-md-7">
               <div class="form">
                 <form action="https://formspree.io/f/xjvlpdvg" method="POST">
                   <div class="row">
