--- a/Index.html
+++ b/Index.html
@@ -105,50 +105,121 @@
       </section>
       <!-- Skills -->
       <section id="skills">
-        <div class="container bg-white shadow mb-5 p-5 ">
-        <div class="row">
-          <div class="col-md-6 d-flex">
-           <div class="row">
-              <div class="skills-item">
-                <i class="fa-brands fa-html5"></i>
-            </div>
-
-              <div class="skills-item">
-                <i class="fa-brands fa-css3-alt"></i>
-            </div>
-              <div class="skills-item">
-                <i class="fa-brands fa-js"></i>
-            </div>
-           </div>
-            <div class="row d-flex flex-row-reverse ms-0 me-0">
-                <div class="skills-item">
-                  <i class="fa-brands fa-vuejs"></i>
-              </div>
-                <div class="skills-item">
-                  <i class="fa-brands fa-node-js"></i>
-              </div>
-                <div class="skills-item">
-                  <i class="fa-solid fa-database"></i>
+        <div class="container bg-white mb-5">
+          <div class="row mb-3">
+            <div class="col-md-4">
+              <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <i class="fa-brands fa-html5"></i>
+                  </div>
+                  <div class="flip-card-back">
+                    <div class="flip-title d-flex justify-content-between">
+                      <h4>HTML</h4>
+                     <p>100%</p>
+                    </div>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
                 </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <i class="fa-brands fa-css3-alt"></i>
+                  </div>
+                  <div class="flip-card-back">
+                    <div class="flip-title d-flex justify-content-between">
+                      <h4>CSS</h4>
+                     <p>100%</p>
+                    </div>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <i class="fa-brands fa-js"></i>
+                  </div>
+                  <div class="flip-card-back">
+                    <div class="flip-title d-flex justify-content-between">
+                      <h4>JAVASCRIPT</h4>
+                     <p>100%</p>
+                    </div>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              
             </div>
           </div>
-          <div class="col2 col-md-6">
-            <!-- <div class="titles1">
-              <h2>Soft<br>Skills</h2>
-              </div> -->
-                  <div class="soft">
-                    <ul>
-                      <li>Adaptability</li>
-                      <li>Growth Mindset</li>
-                      <li>Openess To Feedback</li>
-                      <li>Team Player Attitude</li>
-                      <li>Time Management</li>
-                      <li>Work Ethic</li>
-                    </ul>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <i class="fa-brands fa-node-js"></i>
                   </div>
+                  <div class="flip-card-back">
+                    <div class="flip-title d-flex justify-content-between">
+                      <h4>NODE.JS</h4>
+                     <p>100%</p>
+                    </div>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
                   </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <i class="fa-brands fa-vuejs"></i>
+                  </div>
+                  <div class="flip-card-back">
+                    <div class="flip-title d-flex justify-content-between">
+                      <h4>VUE</h4>
+                     <p>100%</p>
+                    </div>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <i class="fa-solid fa-database"></i>
+                  </div>
+                  <div class="flip-card-back">
+                    <div class="flip-title d-flex justify-content-between">
+                      <h4>DATABASE</h4>
+                     <p>100%</p>
+                    </div>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              
+            </div>
           </div>
-        </div>
         </div>
       </section>
       <!-- Resume -->
@@ -162,19 +233,24 @@
               <h3>EDUCATION</h3>
               <div class="education">
                 <div class="edu-item">
-                  <h6>date</h6>
-                  <h4>heading</h4>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta dolores ipsam molestiae incidunt quae assumenda doloremque placeat, ea id ipsum dolor corrupti esse blanditiis iure optio doloribus quibusdam rerum similique!</p>
+                  <h6>2019</h6>
+                  <h4>High School</h4>
+                  <p>Matriculated at Melkbosstrand High School.</p>
                 </div>
                 <div class="edu-item">
-                  <h6>date</h6>
-                  <h4>heading</h4>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta dolores ipsam molestiae incidunt quae assumenda doloremque placeat, ea id ipsum dolor corrupti esse blanditiis iure optio doloribus quibusdam rerum similique!</p>
+                  <h6>2020</h6>
+                  <h4>Studies</h4>
+                  <p>Started my studies at Code Space in February 2020, until National lockdown in March 2020. I further attended the online classes.</p>
                 </div>
                 <div class="edu-item">
-                  <h6>date</h6>
-                  <h4>heading</h4>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta dolores ipsam molestiae incidunt quae assumenda doloremque placeat, ea id ipsum dolor corrupti esse blanditiis iure optio doloribus quibusdam rerum similique!</p>
+                  <h6>2021</h6>
+                  <h4>Self-Studies</h4>
+                  <p>In the year 2021,I completed short online courses,until my admission to Life Choices Academy in March 2022.</p>
+                </div>
+                <div class="edu-item">
+                  <h6>2022</h6>
+                  <h4>Present</h4>
+                  <p>Furthering my studies through Life Choices Academy.</p>
                 </div>
               </div>
             </div>
@@ -182,19 +258,14 @@
               <h3>EXPERIENCE</h3>
               <div class="experience">
                 <div class="exp-item">
-                  <h6>date</h6>
-                  <h4>heading</h4>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta dolores ipsam molestiae incidunt quae assumenda doloremque placeat, ea id ipsum dolor corrupti esse blanditiis iure optio doloribus quibusdam rerum similique!</p>
+                  <h6>2018-2019</h6>
+                  <h4>Delivery Driver</h4>
+                  <p>I worked as a delivery driver for Debonairs, Fish Away as well as Steers.</p>
                 </div>
                 <div class="exp-item">
-                  <h6>date</h6>
-                  <h4>heading</h4>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta dolores ipsam molestiae incidunt quae assumenda doloremque placeat, ea id ipsum dolor corrupti esse blanditiis iure optio doloribus quibusdam rerum similique!</p>
-                </div>
-                <div class="exp-item">
-                  <h6>date</h6>
-                  <h4>heading</h4>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta dolores ipsam molestiae incidunt quae assumenda doloremque placeat, ea id ipsum dolor corrupti esse blanditiis iure optio doloribus quibusdam rerum similique!</p>
+                  <h6>2020</h6>
+                  <h4>Self-Employed</h4>
+                  <p>As someone who is constantly online, i found a way to use that time in order to make some income. Sold computer hardware online.</p>
                 </div>
               </div>
             </div>
