--- a/Index.html
+++ b/Index.html
@@ -286,38 +286,50 @@
             <h2>PROJECTS</h2>
           </div>
           <div class="staff d-flex justify-content-center mb-5">
-            <img class="img-fluid" src="./images/ciudad-maderas-MXbM1NrRqtI-unsplash.jpg" />
+            <img class="img-fluid" src="./images/milad-fakurian-PpgY7sjpf_0-unsplash.jpg" />
             <div class="staff-details">
-              <h3>Heading</h3>
+              <h3>Cube Navigation</h3>
               <p>HTML/CSS</p>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, aperiam?</p>
               <div class="staff_btn">
-                <a href=""><button class="">Live</button></a>
-              <a href=""><button>Github</button></a>
+                <a href="https://heartfelt-haupia-89f3cf.netlify.app/" target="_blank"><button class="">Live</button></a>
+              <a href="https://github.com/Willzi3/Preparation.git" target="_blank"><button>Github</button></a>
               </div>
             </div>
           </div>
           <div class="staff d-flex justify-content-center mb-5">
-            <img class="img-fluid" src="./images/kelsey-curtis--27u_GzlAFw-unsplash.jpg" />
+            <img class="img-fluid" src="./images/charlesdeluvio-GlavtG-umzE-unsplash.jpg" />
             <div class="staff-details">
-              <h3>Heading</h3>
+              <h3>Calculator</h3>
               <p>HTML/CSS</p>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, aperiam?</p>
               <div class="staff_btn">
-                <a href=""><button class="">Live</button></a>
-              <a href=""><button>Github</button></a>
+                <a href="https://tourmaline-starlight-d6ba80.netlify.app/" target="_blank"><button class="">Live</button></a>
+              <a href="https://github.com/Willzi3/Calculator.git" target="_blank"><button>Github</button></a>
               </div>
             </div>
           </div>
           <div class="staff d-flex justify-content-center mb-5">
-            <img class="img-fluid" src="./images/marten-bjork-n_IKQDCyrG0-unsplash.jpg" />
+            <img class="img-fluid" src="./images/jason-leung-poI7DelFiVA-unsplash.jpg" />
             <div class="staff-details">
-              <h3>Heading</h3>
+              <h3>Restaurantly Website</h3>
               <p>HTML/CSS</p>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, aperiam?</p>
               <div class="staff_btn">
-                <a href=""><button class="">Live</button></a>
-              <a href=""><button>Github</button></a>
+                <a href="https://willowy-hotteok-575d6b.netlify.app/" target="_blank"><button class="">Live</button></a>
+              <a href="https://github.com/Willzi3/restaurantly.git" target="_blank"><button>Github</button></a>
+              </div>
+            </div>
+          </div>
+          <div class="staff d-flex justify-content-center mb-5">
+            <img class="img-fluid" src="./images/adeolu-eletu-DqWEAOHsAvc-unsplash.jpg" />
+            <div class="staff-details">
+              <h3>SignIn Navigation</h3>
+              <p>HTML/CSS</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, aperiam?</p>
+              <div class="staff_btn">
+                <a href="https://super-pegasus-10da01.netlify.app/" target="_blank"><button class="">Live</button></a>
+              <a href="https://github.com/Willzi3/SignIn.git" target="_blank"><button>Github</button></a>
               </div>
             </div>
           </div>
@@ -337,7 +349,7 @@
                     <img src="./images/Cameron (5).JPG" alt="">
                   </div>
                   <div class="t_msg p-5 text-center">
-                    <h6>Name Surname</h6>
+                    <h6>Jason Wandrag</h6>
                     <p>"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, delectus quod perspiciatis quos aspernatur a!"</p>
                   </div>
                 </div>
@@ -348,7 +360,7 @@
                     <img src="./images/Chanique (1).JPG" alt="">
                   </div>
                   <div class="t_msg p-5 text-center">
-                    <h6>Name Surname</h6>
+                    <h6>Sunethia Lawrence</h6>
                     <p>"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, delectus quod perspiciatis quos aspernatur a!"</p>
                   </div>
                 </div>
@@ -359,7 +371,29 @@
                     <img src="./images/Sunethia (4).JPG" alt="">
                   </div>
                   <div class="t_msg p-5 text-center">
-                    <h6>Name Surname</h6>
+                    <h6>Cameron </h6>
+                    <p>"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, delectus quod perspiciatis quos aspernatur a!"</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="card">
+                  <div class="t_img d-flex justify-content-center">
+                    <img src="./images/Sunethia (4).JPG" alt="">
+                  </div>
+                  <div class="t_msg p-5 text-center">
+                    <h6>Chanique Mansoor</h6>
+                    <p>"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, delectus quod perspiciatis quos aspernatur a!"</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="card">
+                  <div class="t_img d-flex justify-content-center">
+                    <img src="./images/Sunethia (4).JPG" alt="">
+                  </div>
+                  <div class="t_msg p-5 text-center">
+                    <h6>Mziyanda Tobo</h6>
                     <p>"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, delectus quod perspiciatis quos aspernatur a!"</p>
                   </div>
                 </div>
@@ -395,17 +429,17 @@
                 <form action="https://formspree.io/f/xjvlpdvg" method="POST">
                   <div class="row d-flex">
                       <div class="col-md-6 form-group mt-3">
-                        <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+                        <input type="text" class="form-control" placeholder="First Name" aria-label="First name">
                       </div>
                       <div class="col-md-6 form-group mt-3">
-                        <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+                        <input type="text" class="form-control" placeholder="Last Name" aria-label="First name">
                       </div>
                       </div>
                       <div class="form-group mt-3">
-                        <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+                        <input type="text" class="form-control" placeholder="Subject" aria-label="Subject">
                       </div>
                       <div class="form-group mt-3">
-                        <textarea name="message" placeholder="Message" rows="5" class="form-control"></textarea>
+                        <textarea name="subject" placeholder="Message" rows="5" class="form-control"></textarea>
                       </div>
                       <!-- your other form fields go here -->
                     <div class="form-group mt-3 d-flex justify-content-center mb-3">
